--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,66 @@
-#greeting {
-  background-color: #F8F8F8;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 24px;
-  margin: 15px;
+* {
+  box-sizing: border-box;
+  position: relative;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  overflow:hidden;
+}
+
+body {
+  font-family: Arial;
+  font-size: 24pt;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#grid {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: auto 1fr;
+}
+
+#toolbar {
+  grid-column: 1 / span 2;
+  grid-row: 1;
+  text-align: center;
+  background-color: #C0C0D0;
+}
+
+#leftnav {
+  grid-column: 1;
+  grid-row: 2;
+  text-align: center;
+  background-color: #D0D0E0;
+  display: flex;
+}
+
+#leftnav-content {
+  align-self: center;
+  height: auto;
+}
+
+#main-content {
+  align-self: center;
+  height: auto;
+}
+
+#main {
+  grid-column: 2;
+  grid-row: 2;
+  text-align: center;
+  background-color: #E0E0F0;
+  display: flex;
+}
+
+#statusbar {
+  grid-column: 1 / span 2;
+  grid-row: 3;
+  text-align: center;
+  background-color: #B0B0C0;
 }
